add logo, update text area scroll, update welcome page.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,3 +42,7 @@
 	--toastify-color-progress-warning: var(--toastify-color-warning);
 	--toastify-color-progress-error: var(--toastify-color-error);
 }
+
+textarea {
+	overflow: visible !important;
+}
